# SME-Lab

./: .gitignore  README.md  pubk_ubuntu.pub  sshubuntu.pub
Final-Project/: README.md
Final-Project/ros2_ws/src/cam_pub_sub/: package.xml  setup.py
Final-Project/ros2_ws/src/gesture_pub_sub/: package.xml  setup.py
Final_Project/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Final_Project/ros2_ws/log/: latest_build
Final_Project/ros2_ws/src/battery_monitoring_12200335/: setup.py
Final_Project/ros2_ws/src/gesture_control/: package.xml  setup.py
Mid-Term_Project/ros2_ws/install/: local_setup.sh  setup.sh
Mid-Term_Project/ros2_ws/log/: latest_build
Mid-Term_Project/ros2_ws/src/dynamic_fleet_manager/: CMakeLists.txt
week-3-homework/: 12200335.sh
week-3-homework/week3/: data.txt
week-4-homework/: .turtlesim.sh.swp  setup_ros2_project.sh  turtlesimm.sh
week-4-homework/install/: local_setup.sh  setup.sh
week-4-homework/log/: latest_build
week-4-homework/my_robot_project/: CMakeLists.txt  package.xml
week-4-homework/my_robot_project/src/: robot_visualizer.sh
week-4-homework/ros2_ws/install/: local_setup.sh  setup.sh
week-4-homework/ros2_ws/log/: latest_build
week-4-homework/ros2_ws/src/install/: local_setup.sh  setup.sh
week-4-homework/ros2_ws/src/log/: latest_build
week-4-homework/ros2_ws/src/my_package/: setup.py
week-5-homework/: action_server_client_intermediate.sh  create-fibonacci.sh  install-rosdep.sh  multiple-nodes_in_single-process.sh
week-6-assignment-Advanced/ros2_ws/install/: local_setup.sh  setup.sh
week-6-assignment-Advanced/ros2_ws/log/: latest_build
week-6-assignment-Advanced/ros2_ws_new/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week-6-assignment-Advanced/ros2_ws_new/log/: latest_build
week-6-assignment-Advanced/ros2_ws_new/src/sync_async_node_example_cpp/: CMakeLists.txt  SyncAsync.xml  ping.xml
week-6-assignment-Advanced/ros2_ws_new/src/sync_async_node_example_cpp/src/: ping_client.cpp  ping_service.cpp  sync_async_reader.cpp  sync_async_writer.cpp
week-6-assignment-Advanced/shell-codes/: DDS-discovery-server.sh  custom-memory-allocator.sh  fast-DDS-middleware.sh  rosbag.sh  topic_statistics.sh
week-7-homework/ros2_ws/install/: local_setup.sh  setup.sh
week-7-homework/ros2_ws/log/: latest_build
week-7-homework/ros2_ws/src/smart_home_cpp/: CMakeLists.txt
week-7-homework/ros2_ws/src/smart_home_cpp/action/: ApplianceControl.action
week-7-homework/ros2_ws/src/smart_home_cpp/src/: appliance_client.cpp  appliance_server.cpp
(+143 files in other folders)
